# 2D_scene_to_bmp

./: CMakeLists.txt  Makefile  README.md  main.cpp  objects_2D.cpp  objects_2D.h  scene.txt  utils.cpp  utils.h
src/: objects_2D.h  utils.h
